# pdf-to-vector

./: Makefile  README.md  TODO.md  browse.sh  cluster_pdfs.py  debug_query.py  extract_text_from_pdfs.py  generate_dummy_pdfs.py  main.py  pyproject.toml  rag_chat.py  txt_to_pdf.py
chroma_db/: chroma.sqlite3
raw_texts/: dummy1.txt
